--- a/.github/workflows/wpcom.yml
+++ b/.github/workflows/wpcom.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Upload the artifact
         uses: actions/upload-artifact@v4
         with:
-          name: notwpcom
+          name: still-not-wpcom
           path: |
             .
             !.git*
