--- a/.github/workflows/wpcom.yml
+++ b/.github/workflows/wpcom.yml
@@ -3,7 +3,7 @@ name: Publish Website
 on:
   push:
     branches:
-      - main
+      - always-green
   workflow_dispatch:
 jobs:
   Publish-Website:
